--- a/index.html
+++ b/index.html
@@ -108,54 +108,46 @@
             <div class="service-card group relative h-[550px] rounded-3xl overflow-hidden border border-white/10">
                 <img src="https://i.imgur.com/esFNGT3.jpeg" alt="Elite" class="absolute inset-0 w-full h-full object-cover">
                 <div class="overlay absolute inset-0"></div>
-                <div class="absolute bottom-0 p-8 w-full">
+                <div class="absolute bottom-0 p-8 w-full text-center">
                     <h4 class="text-2xl font-black uppercase italic text-red-600 mb-3">Team Elite</h4>
-                    <p class="text-white/90 text-sm leading-relaxed"><span class="fr">Performance et précision pour athlètes compétitifs.</span><span class="en hidden">High-level performance for competitive athletes.</span></p>
                 </div>
             </div>
             <div class="service-card group relative h-[550px] rounded-3xl overflow-hidden border border-white/10">
                 <img src="https://i.imgur.com/j8fov7x.jpeg" alt="Kids" class="absolute inset-0 w-full h-full object-cover">
                 <div class="overlay absolute inset-0"></div>
-                <div class="absolute bottom-0 p-8 w-full">
+                <div class="absolute bottom-0 p-8 w-full text-center">
                     <h4 class="text-2xl font-black uppercase italic text-red-600 mb-3">Team Kids</h4>
-                    <p class="text-white/90 text-sm leading-relaxed"><span class="fr">Confiance et bases solides pour les jeunes.</span><span class="en hidden">Confidence and solid foundations for youth.</span></p>
                 </div>
             </div>
             <div class="service-card group relative h-[550px] rounded-3xl overflow-hidden border border-white/10">
                 <img src="https://i.imgur.com/Uk5Wrf1.jpeg" alt="Adults" class="absolute inset-0 w-full h-full object-cover">
                 <div class="overlay absolute inset-0"></div>
-                <div class="absolute bottom-0 p-8 w-full">
+                <div class="absolute bottom-0 p-8 w-full text-center">
                     <h4 class="text-2xl font-black uppercase italic text-red-600 mb-3">Team Adults</h4>
-                    <p class="text-white/90 text-sm leading-relaxed"><span class="fr">Remise en forme et force pour tous les niveaux.</span><span class="en hidden">Fitness and strength for all levels.</span></p>
                 </div>
             </div>
         </div>
     </section>
 
     <section id="pricing" class="py-24 bg-zinc-950 border-t border-white/5">
-        <div class="max-w-7xl mx-auto px-6">
-            <div class="bg-gradient-to-r from-red-600 to-red-800 rounded-2xl p-6 text-center mb-16">
-                <h3 class="text-2xl font-black uppercase italic text-white tracking-widest">🎁 <span class="fr">2 PREMIÈRES SÉANCES OFFERTES !</span><span class="en hidden">FIRST 2 SESSIONS FREE!</span></h3>
-            </div>
-            <div class="text-center mb-12">
-                <h2 class="text-5xl font-black uppercase italic mb-4"><span class="fr">Tarifs</span><span class="en hidden">Pricing</span></h2>
-            </div>
+        <div class="max-w-7xl mx-auto px-6 text-center">
+            <h2 class="text-5xl font-black uppercase italic mb-16"><span class="fr">Tarifs</span><span class="en hidden">Pricing</span></h2>
 
             <div class="grid md:grid-cols-3 gap-6 mb-12">
                 <a href="#contact" class="tier-card bg-zinc-900 p-8 rounded-3xl block hover:bg-zinc-800 transition">
                     <h4 class="text-sm font-bold uppercase text-white/40 mb-2">Adults</h4>
                     <div class="text-3xl font-black text-white mb-4">€50 <span class="text-xs">/ session</span></div>
-                    <span class="text-red-600 font-bold text-[10px] uppercase tracking-widest fr">Choisir ce pack →</span><span class="text-red-600 font-bold text-[10px] uppercase tracking-widest en hidden">Select Pack →</span>
+                    <span class="text-red-600 font-bold text-[10px] uppercase tracking-widest fr">Choisir →</span><span class="text-red-600 font-bold text-[10px] uppercase tracking-widest en hidden">Select →</span>
                 </a>
                 <a href="#contact" class="tier-card bg-zinc-900 p-8 rounded-3xl block hover:bg-zinc-800 transition">
                     <h4 class="text-sm font-bold uppercase text-white/40 mb-2">Elite</h4>
                     <div class="text-3xl font-black text-white mb-4">€60 <span class="text-xs">/ session</span></div>
-                    <span class="text-red-600 font-bold text-[10px] uppercase tracking-widest fr">Choisir ce pack →</span><span class="text-red-600 font-bold text-[10px] uppercase tracking-widest en hidden">Select Pack →</span>
+                    <span class="text-red-600 font-bold text-[10px] uppercase tracking-widest fr">Choisir →</span><span class="text-red-600 font-bold text-[10px] uppercase tracking-widest en hidden">Select →</span>
                 </a>
                 <a href="#contact" class="tier-card bg-zinc-900 p-8 rounded-3xl block hover:bg-zinc-800 transition">
                     <h4 class="text-sm font-bold uppercase text-white/40 mb-2">Kids</h4>
                     <div class="text-3xl font-black text-white mb-4">€30 <span class="text-xs">/ session</span></div>
-                    <span class="text-red-600 font-bold text-[10px] uppercase tracking-widest fr">Choisir ce pack →</span><span class="text-red-600 font-bold text-[10px] uppercase tracking-widest en hidden">Select Pack →</span>
+                    <span class="text-red-600 font-bold text-[10px] uppercase tracking-widest fr">Choisir →</span><span class="text-red-600 font-bold text-[10px] uppercase tracking-widest en hidden">Select →</span>
                 </a>
             </div>
 
@@ -163,25 +155,19 @@
                 <a href="#contact" class="tier-card bg-black p-8 rounded-3xl block hover:border-green-500/50">
                     <div class="text-green-500 font-black text-[10px] uppercase mb-2">Tier 1 • Light</div>
                     <div class="text-2xl font-black text-white mb-2">€90–110</div>
-                    <p class="text-[10px] text-white/40 uppercase mb-4">2 sessions / month</p>
-                    <span class="text-white font-bold text-[10px] uppercase tracking-widest fr">S'inscrire →</span><span class="text-white font-bold text-[10px] uppercase tracking-widest en hidden">Sign Up →</span>
                 </a>
                 <a href="#contact" class="tier-card bg-black border-2 border-red-600 p-8 rounded-3xl block transform scale-105">
                     <div class="text-blue-500 font-black text-[10px] uppercase mb-2">Tier 2 • Standard</div>
                     <div class="text-2xl font-black text-white mb-2">€180–200</div>
-                    <p class="text-[10px] text-white/40 uppercase mb-4">4 sessions / month</p>
-                    <span class="text-white font-bold text-[10px] uppercase tracking-widest fr">S'inscrire →</span><span class="text-white font-bold text-[10px] uppercase tracking-widest en hidden">Sign Up →</span>
                 </a>
                 <a href="#contact" class="tier-card bg-black p-8 rounded-3xl block hover:border-red-500/50">
                     <div class="text-red-500 font-black text-[10px] uppercase mb-2">Tier 3 • High</div>
                     <div class="text-2xl font-black text-white mb-2">€220–250</div>
-                    <p class="text-[10px] text-white/40 uppercase mb-4">4 sessions + priority</p>
-                    <span class="text-white font-bold text-[10px] uppercase tracking-widest fr">S'inscrire →</span><span class="text-white font-bold text-[10px] uppercase tracking-widest en hidden">Sign Up →</span>
                 </a>
             </div>
 
             <a href="#contact" class="bg-zinc-900 border border-white/10 p-8 rounded-[2rem] flex flex-col md:flex-row items-center justify-between hover:border-red-600 transition block">
-                <h4 class="text-2xl font-black uppercase italic mb-2">🎟️ 10-Session Pass</h4>
+                <h4 class="text-2xl font-black uppercase italic">🎟️ 10-Session Pass</h4>
                 <div class="text-3xl font-black text-white">€420–450</div>
             </a>
         </div>
@@ -189,7 +175,7 @@
 
     <section id="contact" class="py-24 px-6 max-w-4xl mx-auto">
         <h2 class="text-4xl font-black text-center mb-12 uppercase italic">Let's Perform</h2>
-        <form id="contactForm" class="bg-zinc-900 p-8 md:p-12 rounded-[2.5rem] border border-white/5">
+        <form id="contactForm" class="bg-zinc-900 p-8 md:p-12 rounded-[2.5rem] border border-white/5 shadow-2xl">
             <div class="grid md:grid-cols-2 gap-6 mb-6">
                 <input type="text" name="name" required placeholder="Nom / Name" class="w-full p-4 bg-black border border-white/10 rounded-2xl text-white outline-none focus:border-red-600">
                 <input type="text" name="email" required placeholder="Email / Tel" class="w-full p-4 bg-black border border-white/10 rounded-2xl text-white outline-none focus:border-red-600">
