--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="grid md:grid-cols-3 gap-8">
             <div class="service-card group relative h-[550px] rounded-3xl overflow-hidden border border-white/10">
-                <img src="https://imgur.com/t24b4iD" alt="Elite" class="absolute inset-0 w-full h-full object-cover">
+                <img src="https://imgur.com/t24b4iD.jpeg" alt="Elite" class="absolute inset-0 w-full h-full object-cover">
                 <div class="overlay absolute inset-0"></div>
                 <div class="absolute bottom-0 p-8 w-full">
                     <h4 class="text-2xl font-black uppercase italic text-red-600 mb-3">Team Elite</h4>
