--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <img src="https://imgur.com/t24b4iD.jpeg" alt="Elite Athletes" class="absolute inset-0 w-full h-full object-cover">
                 <div class="overlay absolute inset-0"></div>
                 <div class="absolute bottom-0 p-8 w-full">
-                    <h4 class="text-2xl font-black uppercase italic text-red-600 mb-3">Team Elite</h4>
+                    <h4 class="text-2xl font-black uppercase italic text-red-600 mb-3">Team Elite Athletes</h4>
                     <p class="text-white/70 text-sm"><span class="fr">Haute performance et précision pour athlètes compétitifs.</span><span class="en hidden">High performance and precision for competitive athletes.</span></p>
                 </div>
             </div>
