--- a/index.html
+++ b/index.html
@@ -74,12 +74,16 @@
                 <h3 class="text-6xl font-black mb-8 uppercase italic leading-none">Coach <span class="text-red-600">Pepito</span></h3>
                 <div class="space-y-6 border-l-4 border-red-600 pl-8">
                     <p class="text-white/80 text-sm md:text-base leading-relaxed">
-                        <span class="fr">Passionné sports coach ET spécialiste en préparation physique, performance et motricité humaine. Titulaire d'un Bachelier en Éducation Physique et d'un Master en Gestion des Organisations Sportives et Préparation Physique.</span>
+                        <span class="fr">Coach sportifpassionné ET spécialiste en préparation physique, performance et motricité humaine. Titulaire d'un Bachelier en Éducation Physique et d'un Master en Gestion des Organisations Sportives et Préparation Physique.</span>
                         <span class="en hidden">Passionate sports coach AND physical preparation specialist, performance, and human movement. I hold a Bachelor’s degree in Physical Education and a Master’s degree in Sports Organization Management and Physical Preparation.</span>
                     </p>
                     <p class="text-white/80 text-sm md:text-base leading-relaxed">
                         <span class="fr">Mon approche combine science, expérience terrain et psychologie du sport pour vous pousser au-delà de vos limites. Ma mission est simple : vous aider à atteindre vos objectifs, que ce soit sur le terrain, à la salle ou dans la vie quotidienne !</span>
                         <span class="en hidden">My approach combines science, field experience, and sports psychology to push you beyond your limits. My mission is simple: to help you reach your goals, whether on the field, in the gym, or in daily life!</span>
+                    </p>
+                    <p class="text-white/80 text-sm md:text-base leading-relaxed">
+                        <span class="fr">Ma mission est simple : vous aider à atteindre vos objectifs, que ce soit sur le terrain, à la salle ou dans la vie quotidienne !</span>
+                        <span class="en hidden">My mission is simple: to help you reach your goals, whether on the field, in the gym, or in daily life!</span>
                     </p>
                 </div>
             </div>
