--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                     </p>
                     <p class="text-white/80 text-sm md:text-base leading-relaxed">
                         <span class="fr">Mon approche combine science, expérience terrain et psychologie du sport pour vous pousser au-delà de vos limites.</span>
+                        <span class="en hidden">My approach combines science, field experience, and sports psychology to push you beyond your limits. My mission is simple: to help you reach your goals, whether on the field, in the gym, or in daily life!</span>
                     </p>
                     <p class="text-white/80 text-sm md:text-base leading-relaxed">
                         <span class="fr">Ma mission est simple : vous aider à atteindre vos objectifs, que ce soit sur le terrain, à la salle ou dans la vie quotidienne !</span>
