--- a/index.html
+++ b/index.html
@@ -26,20 +26,14 @@
         .fa-envelope:hover { color: #dc2626; transform: translateY(-3px); }
         .fa-google:hover { color: #4285f4; transform: translateY(-3px); }
 
-        .tier-card { transition: all 0.4s ease; border: 1px solid rgba(255,255,255,0.08); }
+        .tier-card { transition: all 0.4s ease; border: 1px solid rgba(255,255,255,0.08); height: 100%; display: flex; flex-direction: column; }
         .tier-card:hover { transform: translateY(-5px); border-color: #dc2626; background: rgba(255,255,255,0.02); }
         
-        .price-list li { margin-bottom: 8px; display: flex; align-items: flex-start; }
-        .price-list i { margin-top: 4px; margin-right: 8px; font-size: 10px; color: #dc2626; }
+        .price-list li { margin-bottom: 8px; display: flex; align-items: flex-start; line-height: 1.2; }
+        .price-list i { margin-top: 3px; margin-right: 8px; font-size: 8px; color: #dc2626; }
 
-        /* Animation menu mobile */
-        #mobile-menu {
-            transition: transform 0.3s ease-in-out;
-            transform: translateX(100%);
-        }
-        #mobile-menu.active {
-            transform: translateX(0);
-        }
+        #mobile-menu { transition: transform 0.3s ease-in-out; transform: translateX(100%); }
+        #mobile-menu.active { transform: translateX(0); }
     </style>
 </head>
 <body>
@@ -70,15 +64,15 @@
             <a href="#about" class="mobile-link fr text-xl font-black">LE COACH</a><a href="#about" class="mobile-link en hidden text-xl font-black">THE COACH</a>
             <a href="#services" class="mobile-link fr text-xl font-black">PROGRAMMES</a><a href="#services" class="mobile-link en hidden text-xl font-black">PROGRAMS</a>
             <a href="#pricing" class="mobile-link fr text-xl font-black">TARIFS</a><a href="#pricing" class="mobile-link en hidden text-xl font-black">PRICING</a>
-            <button onclick="toggleLanguage()" class="text-left text-red-500 font-bold uppercase tracking-widest">Langue: <span class="lang-btn-text">EN</span></button>
-            <a href="#contact" class="bg-red-600 text-white text-center py-4 rounded-xl font-black uppercase tracking-widest">Book Now</a>
+            <button onclick="toggleLanguage()" class="text-left text-red-500 font-bold uppercase tracking-widest">LANG: <span class="lang-btn-text">EN</span></button>
+            <a href="#contact" class="mobile-link bg-red-600 text-white text-center py-4 rounded-xl font-black uppercase tracking-widest">Book Now</a>
         </div>
     </nav>
 
     <section id="home" class="hero-gradient h-screen flex items-center justify-center text-center px-6">
         <div class="max-w-5xl">
             <div class="inline-block border-2 border-red-600 text-red-500 text-xs font-black px-6 py-1 rounded-md mb-6 uppercase tracking-[0.4em] bg-red-600/10">SPORTS COACH</div>
-            <h1 class="text-4xl md:text-8xl font-black text-white mb-6 leading-none tracking-tighter uppercase italic">WE DON'T SPEAK<br><span class="text-red-600 uppercase">WE ONLY PERFORM!</span></h1>
+            <h1 class="text-5xl md:text-8xl font-black text-white mb-6 leading-none tracking-tighter uppercase italic">WE DON'T SPEAK<br><span class="text-red-600 uppercase">WE ONLY PERFORM!</span></h1>
             <a href="#contact" class="bg-red-600 text-white px-10 py-4 md:px-12 md:py-5 rounded-xl font-black text-lg hover:bg-red-700 transition uppercase tracking-tight shadow-xl shadow-red-600/40">
                 <span class="fr">Réserver mon bilan</span><span class="en hidden">Book a Session</span>
             </a>
@@ -104,12 +98,8 @@
                         <span class="en hidden">Passionate sports coach AND physical preparation specialist, performance, and human movement. I hold a Bachelor’s degree in Physical Education and a Master’s degree in Sports Organization Management and Physical Preparation.</span>
                     </p>
                     <p class="text-white/80 text-sm md:text-base leading-relaxed">
-                        <span class="fr">Mon approche combine science, expérience terrain et psychologie du sport pour vous pousser au-delà de vos limites.</span>
-                        <span class="en hidden">My approach combines science, field experience, and sports psychology to push you beyond your limits.</span>
-                    </p>
-                    <p class="text-white/80 text-sm md:text-base leading-relaxed">
-                        <span class="fr">Ma mission est simple : vous aider à atteindre vos objectifs, que ce soit sur le terrain, à la salle ou dans la vie quotidienne !</span>
-                        <span class="en hidden">My mission is simple: to help you reach your goals, whether on the field, in the gym, or in daily life!</span>
+                        <span class="fr">Mon approche combine science, expérience terrain et psychologie du sport pour vous pousser au-delà de vos limites. Ma mission est simple : vous aider à atteindre vos objectifs, que ce soit sur le terrain, à la salle ou dans la vie quotidienne !</span>
+                        <span class="en hidden">My approach combines science, field experience, and sports psychology to push you beyond your limits. My mission is simple: to help you reach your goals, whether on the field, in the gym, or in daily life!</span>
                     </p>
                 </div>
             </div>
@@ -149,37 +139,87 @@
     </section>
 
     <section id="pricing" class="py-24 bg-zinc-950 border-t border-white/5">
-        <div class="max-w-7xl mx-auto px-6 text-center">
-            <h2 class="text-5xl font-black uppercase italic mb-16"><span class="fr">Tarifs</span><span class="en hidden">Pricing</span></h2>
-            <div class="grid md:grid-cols-3 gap-8">
-                <div class="tier-card bg-zinc-900/40 p-8 rounded-3xl text-left">
-                    <h4 class="text-sm font-bold uppercase text-white/40 mb-2 italic">Session Unique</h4>
-                    <div class="text-3xl font-black text-white mb-6">€50-60 <span class="text-xs">/ 60 min</span></div>
-                    <ul class="price-list text-[11px] text-white/70 uppercase">
-                        <li><i class="fas fa-circle"></i> Coaching 1:1 personnalisé</li>
-                        <li><i class="fas fa-circle"></i> Analyse technique complète</li>
-                        <li><i class="fas fa-circle"></i> Action plan immédiat</li>
-                    </ul>
-                </div>
-                <div class="tier-card bg-zinc-900/40 p-8 rounded-3xl text-left border-red-600/30">
-                    <div class="text-blue-500 font-black text-[10px] uppercase mb-4 tracking-widest italic">Plus Populaire</div>
-                    <div class="text-3xl font-black text-white mb-6">€180-200 <span class="text-xs">/ mois</span></div>
-                    <ul class="price-list text-[11px] text-white/70 uppercase">
-                        <li><i class="fas fa-star"></i> 4 séances par mois</li>
-                        <li><i class="fas fa-star"></i> Suivi WhatsApp hebdo</li>
-                        <li><i class="fas fa-star"></i> Planning d'entraînement</li>
-                    </ul>
-                </div>
-                <div class="tier-card bg-zinc-900/40 p-8 rounded-3xl text-left">
-                    <h4 class="text-sm font-bold uppercase text-red-500 mb-2 italic">Elite Performance</h4>
-                    <div class="text-3xl font-black text-white mb-6">€220-250 <span class="text-xs">/ mois</span></div>
-                    <ul class="price-list text-[11px] text-white/70 uppercase">
-                        <li><i class="fas fa-bolt"></i> Suivi haute performance</li>
-                        <li><i class="fas fa-bolt"></i> Support prioritaire 24/7</li>
-                        <li><i class="fas fa-bolt"></i> Préparation compétition</li>
-                    </ul>
-                </div>
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="text-center mb-16">
+                <h2 class="text-5xl font-black uppercase italic mb-4"><span class="fr">Tarifs</span><span class="en hidden">Pricing</span></h2>
+                <p class="text-white/40 uppercase tracking-widest text-xs">Single Sessions</p>
             </div>
+
+            <div class="grid md:grid-cols-3 gap-8 mb-20">
+                <a href="#contact" class="tier-card bg-zinc-900/40 p-8 rounded-3xl">
+                    <h4 class="text-xs font-bold uppercase text-white/40 mb-2 italic">Adults Session</h4>
+                    <div class="text-3xl font-black text-white mb-6">€50 <span class="text-xs">/ 60 min</span></div>
+                    <ul class="price-list text-[10px] text-white/70 uppercase">
+                        <li><i class="fas fa-circle"></i> Clarté, direction & support spécifique</li>
+                        <li><i class="fas fa-circle"></i> Outils pratiques & mindset reframes</li>
+                        <li><i class="fas fa-circle"></i> Idéal pour briser les blocages mentaux</li>
+                    </ul>
+                </a>
+                <a href="#contact" class="tier-card bg-zinc-900/40 p-8 rounded-3xl border-red-600/20">
+                    <h4 class="text-xs font-bold uppercase text-red-500 mb-2 italic">Elite Athletes</h4>
+                    <div class="text-3xl font-black text-white mb-6">€60 <span class="text-xs">/ 60 min</span></div>
+                    <ul class="price-list text-[10px] text-white/70 uppercase">
+                        <li><i class="fas fa-star"></i> Focus performance & gestion pression</li>
+                        <li><i class="fas fa-star"></i> Stratégies personnalisées entraînement</li>
+                        <li><i class="fas fa-star"></i> Préparation spécifique compétition</li>
+                    </ul>
+                </a>
+                <a href="#contact" class="tier-card bg-zinc-900/40 p-8 rounded-3xl">
+                    <h4 class="text-xs font-bold uppercase text-white/40 mb-2 italic">Kids / Youth</h4>
+                    <div class="text-3xl font-black text-white mb-6">€30 <span class="text-xs">/ 30-40 min</span></div>
+                    <ul class="price-list text-[10px] text-white/70 uppercase">
+                        <li><i class="fas fa-child"></i> Confiance & éveil motricité</li>
+                        <li><i class="fas fa-child"></i> Régulation émotionnelle & focus</li>
+                        <li><i class="fas fa-child"></i> Feedback optionnel aux parents</li>
+                    </ul>
+                </a>
+            </div>
+
+            <div class="text-center mb-12">
+                <p class="text-white/40 uppercase tracking-widest text-xs">Monthly Coaching Tiers</p>
+            </div>
+
+            <div class="grid md:grid-cols-3 gap-8 mb-16">
+                <a href="#contact" class="tier-card bg-black p-8 rounded-3xl border-green-900/30">
+                    <div class="text-green-500 font-black text-[10px] uppercase mb-4 tracking-widest italic">Tier 1 • Light</div>
+                    <div class="text-3xl font-black text-white mb-6">€90–110</div>
+                    <ul class="price-list text-[10px] text-white/60 space-y-3 uppercase">
+                        <li>• 2 séances / mois (60 min)</li>
+                        <li>• Support WhatsApp léger (Check-ins)</li>
+                        <li>• Focus: Conscience & direction</li>
+                    </ul>
+                </a>
+                <a href="#contact" class="tier-card bg-black p-8 rounded-3xl border-red-600 shadow-2xl scale-105 relative z-10">
+                    <div class="text-blue-500 font-black text-[10px] uppercase mb-4 tracking-widest italic text-center">Tier 2 • Standard</div>
+                    <div class="text-4xl font-black text-white mb-6 text-center">€180–200</div>
+                    <ul class="price-list text-[10px] text-white/80 space-y-3 uppercase">
+                        <li>• 4 séances / mois (Hebdomadaire)</li>
+                        <li>• Habit building & Tracking</li>
+                        <li>• WhatsApp support & Accountability</li>
+                    </ul>
+                </a>
+                <a href="#contact" class="tier-card bg-black p-8 rounded-3xl border-red-900/30">
+                    <div class="text-red-500 font-black text-[10px] uppercase mb-4 tracking-widest italic">Tier 3 • High</div>
+                    <div class="text-3xl font-black text-white mb-6">€220–250</div>
+                    <ul class="price-list text-[10px] text-white/60 space-y-3 uppercase">
+                        <li>• 4 séances + Support Prioritaire</li>
+                        <li>• Check-ins milieu de semaine</li>
+                        <li>• Deep mindset & performance work</li>
+                    </ul>
+                </a>
+            </div>
+
+            <a href="#contact" class="tier-card bg-zinc-900/60 p-10 rounded-[2.5rem] flex flex-col md:flex-row items-center justify-between group">
+                <div class="mb-6 md:mb-0">
+                    <h4 class="text-2xl font-black uppercase italic mb-2 text-red-600">🎟️ 10-Session Pass</h4>
+                    <ul class="text-[10px] text-white/50 uppercase space-y-1">
+                        <li>✓ 10 × 60-min sessions</li>
+                        <li>✓ Flexibilité totale de planning</li>
+                        <li>✓ Accompagnement ultra-personnalisé</li>
+                    </ul>
+                </div>
+                <div class="text-4xl font-black text-white group-hover:scale-110 transition">€420–450</div>
+            </a>
         </div>
     </section>
 
@@ -191,10 +231,14 @@
                 <input type="text" name="email" required placeholder="Email / Tel" class="w-full p-4 bg-black border border-white/10 rounded-2xl text-white outline-none focus:border-red-600">
             </div>
             <div class="mb-6">
-                <select name="goal" class="w-full p-4 bg-black border border-white/10 rounded-2xl text-white outline-none focus:border-red-600 font-bold">
-                    <option value="Elite">Team Elite Athletes</option>
-                    <option value="Kids">Team Kids</option>
-                    <option value="Adults">Team Adults</option>
+                <select name="goal" class="w-full p-4 bg-black border border-white/10 rounded-2xl text-white outline-none focus:border-red-600 font-bold uppercase text-xs">
+                    <option value="Single Adult">Adult Single - €50</option>
+                    <option value="Single Elite">Elite Athlete Single - €60</option>
+                    <option value="Single Kids">Kids Single - €30</option>
+                    <option value="Tier 1">Tier 1 - Light (€90-110)</option>
+                    <option value="Tier 2">Tier 2 - Standard (€180-200)</option>
+                    <option value="Tier 3">Tier 3 - High (€220-250)</option>
+                    <option value="10 Pass">10-Session Pass (€420-450)</option>
                 </select>
             </div>
             <textarea name="message" rows="3" placeholder="Message / Comment" class="w-full p-4 bg-black border border-white/10 rounded-2xl mb-8 outline-none focus:border-red-600"></textarea>
@@ -219,7 +263,7 @@
     </footer>
 
     <script>
-        // TOGGLE MENU MOBILE
+        // MOBILE MENU LOGIC
         const menuBtn = document.getElementById('menu-btn');
         const closeBtn = document.getElementById('close-btn');
         const mobileMenu = document.getElementById('mobile-menu');
@@ -229,17 +273,15 @@
         closeBtn.addEventListener('click', () => mobileMenu.classList.remove('active'));
         mobileLinks.forEach(link => link.addEventListener('click', () => mobileMenu.classList.remove('active')));
 
-        // TOGGLE LANGUE
+        // LANGUAGE LOGIC
         function toggleLanguage() {
             const frElems = document.querySelectorAll('.fr');
             const enElems = document.querySelectorAll('.en');
             const btnTexts = document.querySelectorAll('.lang-btn-text');
-            
             const currentLang = btnTexts[0].innerText;
             const newLang = currentLang === 'EN' ? 'FR' : 'EN';
 
             btnTexts.forEach(t => t.innerText = newLang);
-
             if (currentLang === 'EN') {
                 frElems.forEach(el => el.classList.add('hidden'));
                 enElems.forEach(el => el.classList.remove('hidden'));
@@ -249,7 +291,7 @@
             }
         }
 
-        // FORMULAIRE
+        // FORM LOGIC
         const form = document.getElementById('contactForm');
         const scriptURL = 'https://script.google.com/macros/s/AKfycbwwENRxm1NlbgiQjQDc_0ERIHXdqOzHWP8T2peoZOc3nJCjdcw5Ehl88IWAsO4wCaE/exec';
 
